working on Popular Products

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
   <!-- body part -->
 
   <main class="space-y-7  md:space-y-16 lg:space-y-28">
+    <!-- Services section -->
     <section class="container mx-auto px-2 lg:px-20 space-y-8 md:space-y-12">
       <h2 class="text-primary text-2xl md:text-4xl">Services</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-5 lg:gap-7 ">
@@ -110,7 +111,8 @@
           </div>
           <div class="items-center text-center">
             <h2 class="text-2xl font-semibold">24/7 Services</h2>
-            <p class="text-xl opacity-70 pt-2 lg:w-4/5 mx-auto">Our 24/7 grocery service means you can shop for fresh, high-quality groceries at any time of the day or night.</p>
+            <p class="text-xl opacity-70 pt-2 lg:w-4/5 mx-auto">Our 24/7 grocery service means you can shop for fresh,
+              high-quality groceries at any time of the day or night.</p>
           </div>
         </div><!-- card-2 -->
         <div class="bg-background pt-7 pb-11 px-6  text-center space-y-5 rounded-2xl">
@@ -123,8 +125,9 @@
           </div>
           <div class="items-center text-center">
             <h2 class="text-2xl font-semibold">Fast Delivery</h2>
-            <p class="text-xl opacity-70 pt-2 lg:w-4/5 mx-auto">Need it now? We offer lightning-fast delivery so your groceries arrive as quickly as possible—fresh and on time, every
-            time.</p>
+            <p class="text-xl opacity-70 pt-2 lg:w-4/5 mx-auto">Need it now? We offer lightning-fast delivery so your
+              groceries arrive as quickly as possible—fresh and on time, every
+              time.</p>
           </div>
         </div><!-- card-3 -->
         <div class="bg-background pt-7 pb-11 px-6  text-center space-y-5 rounded-2xl">
@@ -137,8 +140,9 @@
           </div>
           <div class="items-center text-center">
             <h2 class="text-2xl font-semibold">Healthy Products</h2>
-            <p class="text-xl opacity-70 pt-2 lg:w-4/5 mx-auto">Eat better, feel better. Discover our handpicked selection of wholesome, healthy products designed to nourish your body
-            and mind.</p>
+            <p class="text-xl opacity-70 pt-2 lg:w-4/5 mx-auto">Eat better, feel better. Discover our handpicked
+              selection of wholesome, healthy products designed to nourish your body
+              and mind.</p>
           </div>
         </div>
 
@@ -148,36 +152,83 @@
     <!-- category section -->
     <section class="container mx-auto px-2 lg:px-20 ">
       <h2 class="text-primary text-2xl md:text-4xl">Shop By Category</h2>
-      
+
       <div class="carousel max-w-full  rounded-box space-x-4 p-4">
         <!-- card-1 -->
-        <div class="carousel-item space-y-10 flex flex-col w-80 shadow-xl rounded-lg">
-          <img class="" src="./c2-assets/Oil & Extracts.jpg" class="rounded-box" />
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+          <img class="w-full rounded-t-lg" src="./c2-assets/Oil & Extracts.jpg" class="rounded-box" />
           <h5 class="font-bold text-2xl text-center ">Oil & Extracts</h5>
         </div>
-        <div class="carousel-item space-y-10 flex flex-col p-10 w-80">
-          <img class="w-full" src="./c2-assets/Homemade Pickle.jpg" class="rounded-box" />
-              <h5 class="font-bold text-2xl text-center">Homemade Pickle</h5>
+        <!-- card-2 -->
+        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+          <img class="w-full  rounded-t-lg" src="./c2-assets/Homemade Pickle.jpg" class="rounded-box" />
+          <h5 class="font-bold text-2xl text-center">Homemade Pickle</h5>
         </div>
-        <div class="carousel-item space-y-10 flex flex-col p-10 w-80">
-          <img class="w-full" src="./c2-assets/Homemade Spices.jpg" class="rounded-box" />
+        <!-- card-3 -->
+        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+          <img class="w-full  rounded-t-lg" src="./c2-assets/Homemade Spices.jpg" class="rounded-box" />
           <h5 class="font-bold text-2xl text-center">Homemade Spices</h5>
         </div>
-        <div class="carousel-item space-y-10 flex flex-col p-10 w-80">
-          <img src="./c2-assets/Honey.jpg" class="rounded-box" />
+        <!-- card-4 -->
+        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+          <img src="./c2-assets/Honey.jpg" class="rounded-box  rounded-t-lg" />
           <h5 class="font-bold text-2xl text-center">Honey,Nuts & Seeds</h5>
         </div>
-        <div class="carousel-item space-y-10 flex flex-col p-10 w-80">
-          <img class="w-full" src="./c2-assets/Chicken.jpg"/>
+        <!-- card-5 -->
+        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+          <img class="w-full  rounded-t-lg" src="./c2-assets/Chicken.jpg" />
           <h5 class="font-bold text-2xl text-center">Chicken</h5>
         </div>
-        <div class="carousel-item space-y-10 flex flex-col p-10 w-80">
-          <img class="w-full" src="./c2-assets/meat.2.jpg" />
+        <!-- card-6 -->
+        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+          <img class="w-full  rounded-t-lg" src="./c2-assets/meat.2.jpg" />
           <h5 class="font-bold text-2xl text-center">Meat</h5>
         </div>
       </div>
       <div>
-        
+
+      </div>
+    </section>
+    <!-- Popular Products section -->
+    <section class="bg-background">
+      <div class="container mx-auto py-12 lg:py-28 px-2 lg:px-20 space-y-8 md:space-y-12">
+        <h2 class="font-bold text-primary text-4xl">Popular Products</h2>
+        <!-- popular products cards -->
+        <div class="flex flex-col lg:flex-row gap-5">
+<!-- big card -->
+          <div class="card image-full md:w-96 bg-gradient-to-br from-green-600 to-green-50">
+            <div class="flex justify-end">
+              <img class="w-3/5 md:w-2/3 pt-28 z-10" src="./c2-assets/vegetable-offer.png" alt="Shoes" />
+            </div>
+            <div class="z-20 opacity-100 p-5 mt-5 md:p-8 space-y-4">
+              <h2 class="text-white font-extrabold z-20 opacity-100">31% OFF</h2>
+              <p class="text-white">Discover a world of treats,toys and essentials handpicked for</p>
+              <div class="card-actions">
+                <button class="btn">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- small cards -->
+          <div>
+            <!-- card-1 -->
+            <div class="flex p-4 gap-2 bg-white rounded-lg">
+              <div class="bg-background rounded-lg">
+                <img src="./popular-produsts/image 41.png" alt="">
+              </div>
+              <div>
+                <div class="flex items-center">
+                  <i class="fa-solid fa-star"></i>
+                  <p class="font-bold">4.5</p>
+                </div>
+                <h6 class="font-bold">Onion 1 KG</h6>
+                <P>$39.99</P>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
