--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- header part -->
   <header class="space-y-12 md:space-y-12 lg:space-y-20 bg-gradient-to-t from-[#EFEBE3] to-[#FFFFFF]">
     <!-- nav part  -->
-    <nav class="container mx-auto border-primary border-2 md:border-0 md:px-2 lg:px-20">
+    <nav class="container mx-auto border-primary border-2 md:border-0 md:px-2 lg:px-10">
       <div class="flex justify-between py-2 pl-1">
 
         <div class="my-auto"><img class="w-28 lg:w-36" src="./c2-assets/logo-header.png" alt=""></div>
@@ -95,10 +95,10 @@
   </header>
   <!-- body part -->
 
-  <main class="space-y-7  md:space-y-16 lg:space-y-28">
+  <main>
     <!-- Services section -->
-    <section class="container mx-auto px-2 lg:px-20 space-y-8 md:space-y-12">
-      <h2 class="text-primary text-2xl md:text-4xl">Services</h2>
+    <section class="container mx-auto px-2 lg:px-10 space-y-8 md:space-y-12 mt-14 mb-4 md:py-16">
+      <h2 class="font-semibold md:font-bold text-primary text-2xl md:text-4xl font-2xl">Services</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-5 lg:gap-7 ">
         <!-- card-1 -->
         <div class="bg-background pt-7 pb-11 px-6 text-center space-y-5 rounded-2xl">
@@ -150,8 +150,8 @@
       </div>
     </section>
     <!-- category section -->
-    <section class="container mx-auto px-2 lg:px-20 ">
-      <h2 class="text-primary text-2xl md:text-4xl">Shop By Category</h2>
+    <section class="container mx-auto px-2 lg:px-10 space-y-4 md:space-y-12 md:mt-16 mt-12 md:mb-32">
+      <h2 class="font-semibold md:font-bold text-primary text-2xl md:text-4xl font-2xl">Shop By Category</h2>
 
       <div class="carousel max-w-full  rounded-box space-x-4 p-4">
         <!-- card-1 -->
@@ -160,70 +160,173 @@
           <h5 class="font-bold text-2xl text-center ">Oil & Extracts</h5>
         </div>
         <!-- card-2 -->
-        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
           <img class="w-full  rounded-t-lg" src="./c2-assets/Homemade Pickle.jpg" class="rounded-box" />
           <h5 class="font-bold text-2xl text-center">Homemade Pickle</h5>
         </div>
         <!-- card-3 -->
-        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
           <img class="w-full  rounded-t-lg" src="./c2-assets/Homemade Spices.jpg" class="rounded-box" />
           <h5 class="font-bold text-2xl text-center">Homemade Spices</h5>
         </div>
         <!-- card-4 -->
-        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
-          <img src="./c2-assets/Honey.jpg" class="rounded-box  rounded-t-lg" />
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+          <img src="./c2-assets/Honey.jpg" class=" rounded-t-lg" />
           <h5 class="font-bold text-2xl text-center">Honey,Nuts & Seeds</h5>
         </div>
         <!-- card-5 -->
-        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
           <img class="w-full  rounded-t-lg" src="./c2-assets/Chicken.jpg" />
           <h5 class="font-bold text-2xl text-center">Chicken</h5>
         </div>
         <!-- card-6 -->
-        <div class="carousel-item space-y-10 flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
           <img class="w-full  rounded-t-lg" src="./c2-assets/meat.2.jpg" />
           <h5 class="font-bold text-2xl text-center">Meat</h5>
         </div>
       </div>
-      <div>
-
-      </div>
     </section>
     <!-- Popular Products section -->
-    <section class="bg-background">
-      <div class="container mx-auto py-12 lg:py-28 px-2 lg:px-20 space-y-8 md:space-y-12">
-        <h2 class="font-bold text-primary text-4xl">Popular Products</h2>
+    <section class="bg-background my-12 md:my-16 md:py-28">
+      <div class="container mx-auto py-12 px-2 lg:px-10 space-y-8 md:space-y-12">
+        <h2 class="font-semibold md:font-bold text-primary text-2xl md:text-4xl">Popular Products</h2>
         <!-- popular products cards -->
-        <div class="flex flex-col lg:flex-row gap-5">
-<!-- big card -->
-          <div class="card image-full md:w-96 bg-gradient-to-br from-green-600 to-green-50">
+        <div class="lg:flex  gap-5 space-y-6 lg:space-y-0">
+          <!-- big card -->
+          <div class="card image-full bg-gradient-to-br from-primary to-white  lg:w-3/5 ">
             <div class="flex justify-end">
-              <img class="w-3/5 md:w-2/3 pt-28 z-10" src="./c2-assets/vegetable-offer.png" alt="Shoes" />
+              <img class=" pt-28 z-10 " src="./c2-assets/vegetable-offer.png" alt="Shoes" />
             </div>
             <div class="z-20 opacity-100 p-5 mt-5 md:p-8 space-y-4">
               <h2 class="text-white font-extrabold z-20 opacity-100">31% OFF</h2>
-              <p class="text-white">Discover a world of treats,toys and essentials handpicked for</p>
+              <p class="text-white lg:w-4/5">Discover a world of treats,toys and essentials handpicked for</p>
               <div class="card-actions">
                 <button class="btn">Buy Now</button>
               </div>
             </div>
           </div>
           <!-- small cards -->
-          <div>
+          <div class="grid gap-3  grid-cols-2 lg:grid-cols-3 w-full">
             <!-- card-1 -->
-            <div class="flex p-4 gap-2 bg-white rounded-lg">
-              <div class="bg-background rounded-lg">
+            <div class="flex p-3 md:p-4 gap-2 md:gap-4 lg:gap-3 bg-white rounded-lg  ">
+              <div class="bg-background rounded-lg flex items-center">
                 <img src="./popular-produsts/image 41.png" alt="">
               </div>
-              <div>
-                <div class="flex items-center">
-                  <i class="fa-solid fa-star"></i>
-                  <p class="font-bold">4.5</p>
+              <div class="space-y-1 my-auto">
+                <div class="flex items-center gap-2">
+                  <i class="fa-solid fa-star text-orange-400 "></i>
+                  <p class="text-[10px] pt-1">4.5</p>
                 </div>
-                <h6 class="font-bold">Onion 1 KG</h6>
-                <P>$39.99</P>
+                <h6 class="font-bold text-xs">Onion 1 KG</h6>
+                <P class="text-[10px]">$39.99</P>
+              </div>
+            </div><!-- card-2 -->
+            <div class="flex p-3 md:p-4 gap-2 md:gap-4 lg:gap-3 bg-white rounded-lg  ">
+              <div class="bg-background rounded-lg flex items-center">
+                <img src="./popular-produsts/porpular-produsts.png" alt="">
+              </div>
+              <div class="space-y-1 my-auto">
+                <div class="flex items-center gap-2">
+                  <i class="fa-solid fa-star text-orange-400 "></i>
+                  <p class="text-[10px] pt-1">4.5</p>
+                </div>
+                <h6 class="font-bold text-xs">Onion 1 KG</h6>
+                <P class="text-[10px]">$39.99</P>
+              </div>
+            </div><!-- card-3 -->
+            <div class="flex p-3 md:p-4 gap-2 md:gap-4 lg:gap-3 bg-white rounded-lg  ">
+              <div class="bg-background rounded-lg flex items-center">
+                <img src="./popular-produsts/image 44.png" alt="">
+              </div>
+              <div class="space-y-1 my-auto">
+                <div class="flex items-center gap-2">
+                  <i class="fa-solid fa-star text-orange-400 "></i>
+                  <p class="text-[10px] pt-1">4.5</p>
+                </div>
+                <h6 class="font-bold text-xs">Onion 1 KG</h6>
+                <P class="text-[10px]">$39.99</P>
+              </div>
+            </div><!-- card-4 -->
+            <div class="flex p-3 md:p-4 gap-2 md:gap-4 lg:gap-3 bg-white rounded-lg  ">
+              <div class="bg-background rounded-lg flex items-center">
+                <img src="./popular-produsts/porpular-produsts.png" alt="">
+              </div>
+              <div class="space-y-1 my-auto">
+                <div class="flex items-center gap-2">
+                  <i class="fa-solid fa-star text-orange-400 "></i>
+                  <p class="text-[10px] pt-1">4.5</p>
+                </div>
+                <h6 class="font-bold text-xs">Onion 1 KG</h6>
+                <P class="text-[10px]">$39.99</P>
+              </div>
+            </div><!-- card-5 -->
+            <div class="flex p-3 md:p-4 gap-2 md:gap-4 lg:gap-3 bg-white rounded-lg  ">
+              <div class="bg-background rounded-lg flex items-center">
+                <img src="./popular-produsts/image 41.png" alt="">
+              </div>
+              <div class="space-y-1 my-auto">
+                <div class="flex items-center gap-2">
+                  <i class="fa-solid fa-star text-orange-400 "></i>
+                  <p class="text-[10px] pt-1">4.5</p>
+                </div>
+                <h6 class="font-bold text-xs">Onion 1 KG</h6>
+                <P class="text-[10px]">$39.99</P>
+              </div>
+            </div><!-- card-6 -->
+            <div class="flex p-3 md:p-4 gap-2 md:gap-4 lg:gap-3 bg-white rounded-lg  ">
+              <div class="bg-background rounded-lg flex items-center">
+                <img src="./popular-produsts/image 44.png" alt="">
+              </div>
+              <div class="space-y-1 my-auto">
+                <div class="flex items-center gap-2">
+                  <i class="fa-solid fa-star text-orange-400 "></i>
+                  <p class="text-[10px] pt-1">4.5</p>
+                </div>
+                <h6 class="font-bold text-xs">Onion 1 KG</h6>
+                <P class="text-[10px]">$39.99</P>
+              </div>
+            </div><!-- card-7 -->
+            <div class="flex p-3 md:p-4 gap-2 md:gap-4 lg:gap-3 bg-white rounded-lg  ">
+              <div class="bg-background rounded-lg flex items-center">
+                <img src="./popular-produsts/image 41.png" alt="">
+              </div>
+              <div class="space-y-1 my-auto">
+                <div class="flex items-center gap-2">
+                  <i class="fa-solid fa-star text-orange-400 "></i>
+                  <p class="text-[10px] pt-1">4.5</p>
+                </div>
+                <h6 class="font-bold text-xs">Onion 1 KG</h6>
+                <P class="text-[10px]">$39.99</P>
+              </div>
+            </div><!-- card-8 -->
+            <div class="flex p-3 md:p-4 gap-2 md:gap-4 lg:gap-3 bg-white rounded-lg  ">
+              <div class="bg-background rounded-lg flex items-center">
+                <img src="./popular-produsts/image 44.png" alt="">
+              </div>
+              <div class="space-y-1 my-auto">
+                <div class="flex items-center gap-2">
+                  <i class="fa-solid fa-star text-orange-400 "></i>
+                  <p class="text-[10px] pt-1">4.5</p>
+                </div>
+                <h6 class="font-bold text-xs">Onion 1 KG</h6>
+                <P class="text-[10px]">$39.99</P>
               </div>
             </div>
+            <!-- card-9 -->
+            <div class="p-3 md:p-4 gap-2 md:gap-4 lg:gap-3 bg-white rounded-lg hidden lg:flex ">
+              <div class="bg-background rounded-lg flex items-center">
+                <img src="./popular-produsts/porpular-produsts.png" alt="">
+              </div>
+              <div class="space-y-1 my-auto">
+                <div class="flex items-center gap-2">
+                  <i class="fa-solid fa-star text-orange-400 "></i>
+                  <p class="text-[10px] pt-1">4.5</p>
+                </div>
+                <h6 class="font-bold text-xs">Onion 1 KG</h6>
+                <P class="text-[10px]">$39.99</P>
+              </div>
+            </div>
+
 
 
           </div>
@@ -231,9 +334,90 @@
 
       </div>
     </section>
+    <!-- new arrive  -->
+    <section class="container mx-auto my-12 px-2 lg:px-10 space-y-8 md:space-y-12 md:my-28">
+      <h2 class="text-primary text-2xl md:text-4xl font-semibold md:font-bold">Arrival & Offers</h2>
+      <div class="lg:flex gap-5 space-y-6 lg:space-y-0">
+        <!-- card-1 -->
+        <div class="flex justify-evenly 
+        bg-green-900 pl-4  rounded-lg lg:w-[60%]">
+          <div class="space-y-4 md:space-y-6 lg:pl-10 xl:pl-0 lg:pt-5 my-auto ">
+            <img src="./c2-assets/dawat-logo.png" alt="">
+            <button class="py-2 md:py-3 lg:py-4 px-2 md:px-5 lg:px-6 xl:px-8   bg-green-600 text-white rounded-lg text-xs">Cook Exotic Dishes</button>
+            <p class="text-xl lg:text-4xl font-normal text-white">UP to <span class="font-semibold">
+                20% OFF
+              </span></p>
+          </div>
+          <div class="flex  justify-end items-end mt-5 w-[300px] -mr-5 md:mr-0">
+            <img src="./c2-assets/dawat-mock-up.png" alt="">
+          </div>
+        </div>
+        <!-- card-2 -->
+        
+                  <div class="flex justify-between px-5 md:px-20 lg:px-5 xl:px-10 bg-blue-950   rounded-lg lg:w-[40%] gap-3 ">
+                    <div class="space-y-3 my-auto py-5 md:space-y-6 ">
+                      <img class="w-2/5" src="./c2-assets/india-gate-logo.png" alt="">
+                      <button class="py-2 md:py-3 lg:py-4 px-2 md:px-5 lg:px-6 xl:px-8
+                      bg-blue-800 text-white rounded-lg text-xs">Cook
+                        Exotic Dishes</button>
+                      <p class="text-xl lg:text-4xl text-white">UP to <span class="font-semibold">
+                          40% OFF
+                        </span></p>
+                    </div>
+                    <div class="flex  justify-end items-end mt-5 w-2/5 ">
+                      <img src="./c2-assets/india-gate-mock-up.png" alt="">
+                    </div>
+                  </div>
+        
+      </div>
+    </section>
+    <!-- Get Grocery News! -->
+     <section class="container mx-auto px-2 lg:px-10 space-y-8 md:space-y-12 -mb-72 ">
+      <div class="bg-background grid md:grid-cols-2 items-center py-10 relative z-50 rounded-lg">
+        <figure class="mx-auto">
+          <img src="./c2-assets/vegetable-busket.png" alt="Album" />
+        </figure>
+        <div class="space-y-3 lg:space-y-4 text-center md:text-left">
+          <h2 class="text-2xl md:text-4xl font-semibold text-primary mt-5 md:mt-0">Get Grocery News</h2>
+          <p class="text-sm px-3 md:px-0 md:text-xl md:w-3/4 mx-auto md:mx-0">Exclusive training tips, ticks, product deals and more.</p>
+         <div class="space-y-3">
+          <input type="email" name="email" id="" placeholder="Enter Email" class="py-5 px-5 w-[90%] md:w-4/5 lg:w-3/5 rounded-lg"> <br>
+          <button class="btn bg-primary text-white">Subscribe</button>
+         </div>
+        </div>
+      </div>
+
+     </section>
   </main>
   <!-- footer part -->
-  <footer></footer>
+  <footer class="bg-primary w-full z-10 pt-[90%] md:pt-[40%] 
+  lg:pt-[20%] xl:pt-[15%] ">
+    <section class="container mx-auto px-2 lg:px-10  footer p-10 text-white">
+      <nav class="space-y-3 md:w-72 lg:w-96">
+        <img src="./c2-assets/logo-footer.png" alt="">
+        <p class="opacity-70">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
+      </nav>
+      <nav class="space-y-4 md:space-y-6">
+        <a class="link link-hover">Product</a>
+        <a class="link link-hover">Services</a>
+        <a class="link link-hover">Contact Us</a>
+      </nav>
+      <nav class="flex justify-end items-end md:ml-[30%] md:mt-[20%] ">
+        <div>
+
+          <h6 class="footer-title opacity-100">Follow Us</h6>
+          <div class="space-x-5">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </div>
+        </div>
+  
+      </nav>
+    </section>
+
+  </footer>
 </body>
 
 </html>
