--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           <p class="text-sm px-3 md:px-0 md:text-xl md:w-3/4 mx-auto md:mx-0">Exclusive training tips, ticks, product deals and more.</p>
          <div class="space-y-3">
           <input type="email" name="email" id="" placeholder="Enter Email" class="py-5 px-5 w-[90%] md:w-4/5 lg:w-3/5 rounded-lg"> <br>
-          <button class="btn bg-primary text-white">Subscribe</button>
+          <button class="btn bg-primary text-white border-none">Subscribe</button>
          </div>
         </div>
       </div>
