px-4 added in every section and add a array button

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <main>
     <!-- Services section -->
-    <section class="container mx-auto px-2 lg:px-10 space-y-8 md:space-y-12 mt-14 mb-4 md:py-16">
+    <section class="container mx-auto px-4 lg:px-10 space-y-8 md:space-y-12 mt-14 mb-4 md:py-16">
       <h2 class="font-semibold md:font-bold text-primary text-2xl md:text-4xl font-2xl">Services</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-5 lg:gap-7 ">
         <!-- card-1 -->
@@ -150,45 +150,49 @@
       </div>
     </section>
     <!-- category section -->
-    <section class="container mx-auto px-2 lg:px-10 space-y-4 md:space-y-12 md:mt-16 mt-12 md:mb-32">
+    <section class="container mx-auto px-4 lg:px-10 space-y-4 md:space-y-12 md:mt-16 mt-12 md:mb-32">
       <h2 class="font-semibold md:font-bold text-primary text-2xl md:text-4xl font-2xl">Shop By Category</h2>
 
       <div class="carousel max-w-full  rounded-box space-x-4 p-4">
         <!-- card-1 -->
-        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 border-2 border-primary border-opacity-50 rounded-lg">
           <img class="w-full rounded-t-lg" src="./c2-assets/Oil & Extracts.jpg" class="rounded-box" />
           <h5 class="font-bold text-2xl text-center ">Oil & Extracts</h5>
         </div>
         <!-- card-2 -->
-        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 border-2 border-primary border-opacity-50  rounded-lg">
           <img class="w-full  rounded-t-lg" src="./c2-assets/Homemade Pickle.jpg" class="rounded-box" />
           <h5 class="font-bold text-2xl text-center">Homemade Pickle</h5>
         </div>
         <!-- card-3 -->
-        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 border-2 border-primary border-opacity-50  rounded-lg">
           <img class="w-full  rounded-t-lg" src="./c2-assets/Homemade Spices.jpg" class="rounded-box" />
           <h5 class="font-bold text-2xl text-center">Homemade Spices</h5>
         </div>
         <!-- card-4 -->
-        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 border-2 border-primary border-opacity-50  rounded-lg">
           <img src="./c2-assets/Honey.jpg" class=" rounded-t-lg" />
           <h5 class="font-bold text-2xl text-center">Honey,Nuts & Seeds</h5>
         </div>
         <!-- card-5 -->
-        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 border-2 border-primary border-opacity-50  rounded-lg">
           <img class="w-full  rounded-t-lg" src="./c2-assets/Chicken.jpg" />
           <h5 class="font-bold text-2xl text-center">Chicken</h5>
         </div>
         <!-- card-6 -->
-        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 shadow-xl rounded-lg">
+        <div class="carousel-item flex flex-col w-80 h-5/6 space-y-5 pb-6 border-2 border-primary border-opacity-50  rounded-lg">
           <img class="w-full  rounded-t-lg" src="./c2-assets/meat.2.jpg" />
           <h5 class="font-bold text-2xl text-center">Meat</h5>
         </div>
       </div>
+      <div class="flex justify-end">
+        <i class="fa-solid fa-arrow-right bg-primary p-3 rounded-full text-white"></i>
+      </div>
+
     </section>
     <!-- Popular Products section -->
     <section class="bg-background my-12 md:my-16 md:py-28">
-      <div class="container mx-auto py-12 px-2 lg:px-10 space-y-8 md:space-y-12">
+      <div class="container mx-auto py-12 px-4 lg:px-10 space-y-8 md:space-y-12">
         <h2 class="font-semibold md:font-bold text-primary text-2xl md:text-4xl">Popular Products</h2>
         <!-- popular products cards -->
         <div class="lg:flex  gap-5 space-y-6 lg:space-y-0">
@@ -335,7 +339,7 @@
       </div>
     </section>
     <!-- new arrive  -->
-    <section class="container mx-auto my-12 px-2 lg:px-10 space-y-8 md:space-y-12 md:my-28">
+    <section class="container mx-auto my-12 px-4 lg:px-10 space-y-8 md:space-y-12 md:my-28">
       <h2 class="text-primary text-2xl md:text-4xl font-semibold md:font-bold">Arrival & Offers</h2>
       <div class="lg:flex gap-5 space-y-6 lg:space-y-0">
         <!-- card-1 -->
@@ -372,7 +376,7 @@
       </div>
     </section>
     <!-- Get Grocery News! -->
-     <section class="container mx-auto px-2 lg:px-10 space-y-8 md:space-y-12 -mb-72 ">
+     <section class="container mx-auto px-4 lg:px-10 space-y-8 md:space-y-12 -mb-72 ">
       <div class="bg-background grid md:grid-cols-2 items-center py-10 relative z-50 rounded-lg">
         <figure class="mx-auto">
           <img src="./c2-assets/vegetable-busket.png" alt="Album" />
@@ -392,7 +396,7 @@
   <!-- footer part -->
   <footer class="bg-primary w-full z-10 pt-[90%] md:pt-[40%] 
   lg:pt-[20%] xl:pt-[15%] ">
-    <section class="container mx-auto px-2 lg:px-10  footer p-10 text-white">
+    <section class="container mx-auto px-4 lg:px-10  footer p-10 text-white">
       <nav class="space-y-3 md:w-72 lg:w-96">
         <img src="./c2-assets/logo-footer.png" alt="">
         <p class="opacity-70">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
