footer icon bg change and now it's ready to submit

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         <div>
 
           <h6 class="footer-title opacity-100">Follow Us</h6>
-          <div class="space-x-5">
+          <div class="space-x-5 text-background">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
