--- a/index.html
+++ b/index.html
@@ -410,11 +410,11 @@
         <div>
 
           <h6 class="footer-title opacity-100">Follow Us</h6>
-          <div class="space-x-5 text-background">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-youtube"></i>
+          <div class="space-x-5 ">
+            <i class="fa-brands fa-facebook text-background"></i>
+            <i class="fa-brands fa-instagram text-background"></i>
+            <i class="fa-brands fa-linkedin text-background"></i>
+            <i class="fa-brands fa-youtube text-background"></i>
           </div>
         </div>
   
